--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "@angular/platform-server": "^18.1.4",
     "@angular/router": "^18.1.4",
     "@angular/ssr": "^18.1.4",
+    "bootstrap": "^5.3.7",
     "express": "^4.18.2",
     "rxjs": "~7.8.0",
     "tslib": "^2.3.0",
