--- a/netlify.toml
+++ b/netlify.toml
@@ -1,6 +1,6 @@
 [build]
   command = "ng build --configuration=production"
-  publish = "dist/incredicol"
+  publish = "dist/incredicol/browser"
 
 [[redirects]]
   from = "/*"
