--- a/Back-End/package.json
+++ b/Back-End/package.json
@@ -1,21 +1,25 @@
 {
-  "name": "back-end",
+  "name": "incredicol-backend",
   "version": "1.0.0",
-  "main": "index.js",
+  "main": "server.js",
   "scripts": {
     "start": "node server.js",
-    "dev": "nodemon server.js"
+    "dev": "nodemon server.js",
+    "test": "echo \"Error: no test specified\" && exit 1"
   },
-  "keywords": [],
-  "author": "",
+  "keywords": ["incredicol", "backend", "api"],
+  "author": "Tu Nombre",
   "license": "ISC",
-  "description": "",
+  "description": "Backend para Incredicol",
   "dependencies": {
     "cors": "^2.8.5",
-    "express": "^5.1.0",
+    "express": "^4.18.2",
     "mongoose": "^8.19.0"
   },
   "devDependencies": {
     "nodemon": "^3.1.10"
+  },
+  "engines": {
+    "node": ">=14.0.0"
   }
 }
